# mpecdsa

./: Cargo.toml  README.md
src/: blame.rs  lib.rs  party_i.rs  test.rs
src/state_machine/: keygen.rs  sign.rs
src/state_machine/keygen/: rounds.rs
src/state_machine/sign/: rounds.rs
src/utilities/: mod.rs
src/utilities/mta/: mod.rs  test.rs
src/utilities/zk_pdl_with_slack/: mod.rs  test.rs
