[package]
name = "mpecdsa"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2"
libsecp256k1 = "0.3.2"
round-based = { version = "0.1.4", features = [] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9"
subtle = { version = "2" }
thiserror = "1.0.30"
zeroize = "1"

[dependencies.curv]
package = "curv-kzen"
version = "0.9.0"

[dependencies.centipede]
version = "0.3"
default-features = false

[dependencies.paillier]
package = "kzen-paillier"
version = "0.4"

[dependencies.zk-paillier]
version = "0.4"

[dev-dependencies]
serde_json = "1.0"
round-based = { version = "0.1.4", features = ["dev"] }
